@@ -1,10 +1,13 @@
 package org.guzzing.studayserver.domain.auth.config;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
+
+import org.guzzing.studayserver.domain.auth.exception.SecurityExceptionHandlerFilter;
 import org.guzzing.studayserver.domain.auth.jwt.AuthTokenProvider;
 import org.guzzing.studayserver.domain.auth.jwt.JwtAuthenticationFilter;
+import org.guzzing.studayserver.domain.auth.jwt.logout.LogoutAuthenticationFilter;
+import org.guzzing.studayserver.domain.auth.service.AuthService;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -25,14 +28,19 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 public class SecurityConfig {
 
     private final AuthTokenProvider authTokenProvider;
+    private final AuthService authService;
+    private final SecurityExceptionHandlerFilter securityExceptionHandlerFilter;
 
-    public SecurityConfig(AuthTokenProvider authTokenProvider) {
+    public SecurityConfig(AuthTokenProvider authTokenProvider, AuthService authService, SecurityExceptionHandlerFilter securityExceptionHandlerFilter) {
         this.authTokenProvider = authTokenProvider;
+        this.authService = authService;
+        this.securityExceptionHandlerFilter = securityExceptionHandlerFilter;
     }
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         JwtAuthenticationFilter jwtTokenValidationFilter = new JwtAuthenticationFilter(authTokenProvider);
+        LogoutAuthenticationFilter logoutAuthenticationFilter = new LogoutAuthenticationFilter(authTokenProvider, authService);
 
         http
                 .authorizeHttpRequests(request -> request
@@ -49,7 +57,9 @@ public class SecurityConfig {
                 .csrf(AbstractHttpConfigurer::disable)
                 .httpBasic(HttpBasicConfigurer::disable)
                 .formLogin(httpSecurityFormLoginConfigurer -> httpSecurityFormLoginConfigurer.disable())
-                .addFilterBefore(jwtTokenValidationFilter, UsernamePasswordAuthenticationFilter.class);
+                .addFilterBefore(jwtTokenValidationFilter, UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(logoutAuthenticationFilter, JwtAuthenticationFilter.class)
+                .addFilterBefore(securityExceptionHandlerFilter, LogoutAuthenticationFilter.class);
 
         return http.build();
     }
@@ -59,7 +69,7 @@ public class SecurityConfig {
         CorsConfiguration configuration = new CorsConfiguration();
 
         configuration.setAllowCredentials(true);
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
+        configuration.setAllowedOriginPatterns(List.of("*"));
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setExposedHeaders(List.of("*"));
